--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Cronometro para intervalo - Digital House</h1>
+        <h1 class="title">Cronômetro para intervalo - Digital House</h1>
 
         <main class="main">
             <h3 class="subtitle" id="counter">00:00:00</h3>
